--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="light">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,26 +28,53 @@
         "opsz" 24;
     }
   </style>
+
+
+
+
 </head>
 
-<body class="bg-background-light text-text-main antialiased font-display">
+
+
+
+<body
+  class="bg-background-light text-text-main antialiased font-display
+         dark:bg-background-dark dark:text-slate-100">
+
+     <button
+  id="theme-toggle"
+  class="fixed top-4 right-4 z-[9999]
+         flex items-center justify-center
+         w-10 h-10 rounded-full
+         bg-slate-100 text-slate-700
+         hover:bg-slate-200 transition
+         dark:bg-slate-800 dark:text-slate-200 dark:hover:bg-slate-700"
+  aria-label="Toggle dark mode"
+>
+  <span class="material-symbols-outlined text-lg">dark_mode</span>
+</button>
+
 <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
 
 <!-- ================= HEADER ================= -->
-<header class="sticky top-0 z-50 w-full border-b border-[#e7edf3] bg-white/80 backdrop-blur-md">
+<header
+  class="sticky top-0 z-50 w-full
+         border-b border-[#e7edf3] dark:border-slate-800
+         bg-white dark:bg-slate-900
+         backdrop-blur-md">
   <div class="px-6 md:px-12 lg:px-40 flex justify-center">
     <div class="flex w-full max-w-[960px] items-center justify-between py-4">
       <div class="flex items-center gap-3">
         <div class="flex size-8 items-center justify-center rounded-lg bg-primary/10 text-primary">
-          <span class="material-symbols-outlined text-xl">terminal</span>
+          <span class="material-symbols-outlined text-slate-600 dark:text-slate-300">terminal</span>
         </div>
         <h2 class="text-lg font-bold tracking-tight">Rafael Gonzaga</h2>
       </div>
 
       <nav class="hidden sm:flex items-center gap-8">
-        <a class="text-sm font-medium text-slate-600 hover:text-primary transition-colors" href="#work">Work</a>
-        <a class="text-sm font-medium text-slate-600 hover:text-primary transition-colors" href="#skills">Skills</a>
-        <a class="text-sm font-medium text-slate-600 hover:text-primary transition-colors" href="#contact">Contact</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#work">Work</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 transition-colors" href="#skills">Skills</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#contact">Contact</a>
       </nav>
     </div>
   </div>
@@ -64,7 +91,7 @@
       Machine Learning <br /> Software Engineer.
     </h1>
 
-    <p class="text-xl text-text-secondary leading-relaxed max-w-2xl">
+    <p class="text-xl text-text leading-relaxed max-w-2xl">
       Specializing in building scalable AI systems and production-grade ML infrastructure.
       Turning research into reliable, high-performance software.
     </p>
@@ -94,7 +121,11 @@
   </div>
 
   <!-- Project 1 -->
-  <article class="group relative flex flex-col md:flex-row overflow-hidden rounded-xl border border-slate-200 bg-white transition-all hover:border-slate-300">
+  <article  class="group relative flex flex-col md:flex-row
+         overflow-hidden rounded-xl
+         border border-slate-200 dark:border-slate-800
+         bg-white dark:bg-slate-900
+         transition-all hover:border-slate-300 dark:hover:border-slate-700">
     <div class="w-full md:w-2/5 h-64 md:h-auto bg-slate-100 relative overflow-hidden">
       <div
         class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-105"
@@ -105,18 +136,18 @@
     <div class="flex flex-1 flex-col justify-between p-6 md:p-8">
       <div>
         <h3 class="text-xl font-bold mb-2">ML End-to-End in Production</h3>
-        <p class="text-text-secondary mb-6 leading-relaxed max-w-xl">
+        <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl">
           A comprehensive system for deploying and monitoring ML models at scale.
           Built a custom Kubernetes operator to manage model lifecycle, reducing
           deployment time by 60% and ensuring 99.9% uptime for inference services.
         </p>
 
         <div class="flex flex-wrap gap-2 mb-6">
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">Python</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">Kubernetes</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">TensorFlow</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">Docker</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">Prometheus</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Python</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark">Kubernetes</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">TensorFlow</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Docker</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Prometheus</span>
         </div>
       </div>
 
@@ -130,7 +161,12 @@
   </article>
 
   <!-- Project 2 -->
-  <article class="group relative flex flex-col md:flex-row overflow-hidden rounded-xl border border-slate-200 bg-white transition-all hover:border-slate-300">
+ <article
+  class="group relative flex flex-col md:flex-row
+         overflow-hidden rounded-xl
+         border border-slate-200 dark:border-slate-800
+         bg-white dark:bg-slate-900
+         transition-all hover:border-slate-300 dark:hover:border-slate-700">
     <div class="w-full md:w-2/5 h-64 md:h-auto bg-slate-100 relative overflow-hidden">
       <div
         class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-105"
@@ -141,16 +177,16 @@
     <div class="flex flex-1 flex-col justify-between p-6 md:p-8">
       <div>
         <h3 class="text-xl font-bold mb-2">AI Agent in Production</h3>
-        <p class="text-text-secondary mb-6 leading-relaxed max-w-xl">
+        <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl">
           Developed an autonomous AI agent capable of executing complex multi-step tasks.
           Integrated LLMs with vector databases for semantic search and long-term memory.
         </p>
 
         <div class="flex flex-wrap gap-2 mb-6">
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">LLMs</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">LangChain</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">Pinecone</span>
-          <span class="inline-flex rounded-md bg-slate-100 px-2.5 py-0.5 text-xs font-medium">FastAPI</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">LLMs</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">LangChain</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Pinecone</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">FastAPI</span>
         </div>
       </div>
 
@@ -171,20 +207,22 @@
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div class="rounded-lg border border-slate-200 bg-white p-6 hover:shadow-sm transition-shadow">
+    <div class="rounded-lg border border-slate-200   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
       <h3 class="font-bold mb-2">SaaS Analytics Dashboard</h3>
-      <p class="text-sm text-text-secondary mb-4">
+      <p class="text-sm  dark:text-slate-300 mb-4">
         Full stack React application with Node.js backend for visualizing real-time user metrics.
       </p>
-      <div class="text-xs text-slate-500 font-mono">React • Node.js • PostgreSQL</div>
+      <div class="text-xs text-slate-450 font-mono">React • Node.js • PostgreSQL</div>
     </div>
 
-    <div class="rounded-lg border border-slate-200 bg-white p-6 hover:shadow-sm transition-shadow">
+    <div class="rounded-lg border border-slate-200dark:   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
       <h3 class="font-bold mb-2">Fitness Tracker iOS</h3>
-      <p class="text-sm text-text-secondary mb-4">
+      <p class="text-sm  dark:text-slate-300 mb-4">
         Native iOS application utilizing HealthKit and CoreML.
       </p>
-      <div class="text-xs text-slate-500 font-mono">Swift • SwiftUI • CoreML</div>
+      <div class="text-xs text-slate-450 font-mono">Swift • SwiftUI • CoreML</div>
     </div>
   </div>
 </section>
@@ -197,16 +235,20 @@
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
     <ul class="space-y-3">
-      <li class="flex justify-between items-center p-3 rounded-lg bg-slate-50 border">
+      <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
         <span>Python & PyTorch</span><span class="text-xs text-slate-400">Expert</span>
       </li>
-      <li class="flex justify-between items-center p-3 rounded-lg bg-slate-50 border">
+      <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
         <span>Docker & Kubernetes</span><span class="text-xs text-slate-400">Advanced</span>
       </li>
-      <li class="flex justify-between items-center p-3 rounded-lg bg-slate-50 border">
+      <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
         <span>AWS & GCP</span><span class="text-xs text-slate-400">Advanced</span>
       </li>
-      <li class="flex justify-between items-center p-3 rounded-lg bg-slate-50 border">
+      <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-darktext-text-main border">
         <span>SQL & NoSQL</span><span class="text-xs text-slate-400">Proficient</span>
       </li>
     </ul>
@@ -234,6 +276,25 @@
       </div>
     </div>
   </div>
+<script>
+  const html = document.documentElement;
+  const button = document.getElementById("theme-toggle");
+  const icon = button.querySelector("span");
+
+  // carregar tema salvo
+  if (localStorage.getItem("theme") === "dark") {
+    html.classList.add("dark");
+    icon.textContent = "light_mode";
+  }
+
+  button.addEventListener("click", () => {
+    const isDark = html.classList.toggle("dark");
+    localStorage.setItem("theme", isDark ? "dark" : "light");
+    icon.textContent = isDark ? "light_mode" : "dark_mode";
+  });
+</script>
+
+
 </section>
 
 <!-- ================= FOOTER ================= -->
@@ -245,15 +306,15 @@
 <span class="text-xs text-slate-500">© 2024</span>
 </div>
 <div class="flex items-center gap-8">
-<a class="text-sm font-medium text-slate-600 dark:text-slate-400 hover:text-primary transition-colors flex items-center gap-1" href="#">
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="#">
                                 GitHub
                                 <span class="material-symbols-outlined text-base">arrow_outward</span>
 </a>
-<a class="text-sm font-medium text-slate-600 dark:text-slate-400 hover:text-primary transition-colors flex items-center gap-1" href="#">
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="#">
                                 LinkedIn
                                 <span class="material-symbols-outlined text-base">arrow_outward</span>
 </a>
-<a class="text-sm font-medium text-slate-600 dark:text-slate-400 hover:text-primary transition-colors flex items-center gap-1" href="mailto:hello@example.com">
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="mailto:hello@example.com">
                                 Email
                                 <span class="material-symbols-outlined text-base">mail</span>
 </a>
