--- a/index.html
+++ b/index.html
@@ -29,16 +29,11 @@
     }
   </style>
 
-
-
-
 </head>
 
-
-
-
 <body
-  class="bg-background-light text-text-main antialiased font-display
+
+  class="invisible bg-background-light text-text-main antialiased font-display
          dark:bg-background-dark dark:text-slate-100">
 
      <button
@@ -72,9 +67,11 @@
       </div>
 
       <nav class="hidden sm:flex items-center gap-8">
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#work">Work</a>
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 transition-colors" href="#skills">Skills</a>
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" href="#contact">Contact</a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" data-i18n="nav.work"></a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 transition-colors" data-i18n="nav.skills"></a>
+        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" data-i18n="nav.contact"></a>
+        <button onclick="setLang('pt-BR')">PT</button>
+<button onclick="setLang('en')">EN</button>
       </nav>
     </div>
   </div>
@@ -87,37 +84,33 @@
 <!-- ================= HERO ================= -->
 <section class="flex flex-col gap-6 py-10">
   <div class="max-w-3xl">
-    <h1 class="text-5xl md:text-6xl font-black tracking-tight mb-6 leading-[1.1]">
-      Machine Learning <br /> Software Engineer.
-    </h1>
-
-    <p class="text-xl text-text leading-relaxed max-w-2xl">
-      Specializing in building scalable AI systems and production-grade ML infrastructure.
-      Turning research into reliable, high-performance software.
-    </p>
+   <h1 class="text-5xl md:text-6xl font-black tracking-tight mb-6 leading-[1.1]">
+  <span data-i18n="hero.titleLine1"></span><br />
+  <span data-i18n="hero.titleLine2"></span>
+</h1>
+   <p class="text-xl text-text leading-relaxed max-w-2xl" data-i18n="hero.subtitle"></p>
   </div>
 
   <div class="flex gap-4 pt-2">
-    <a
-      href="#contact"
-      class="inline-flex h-10 items-center justify-center rounded-lg bg-primary px-6 text-sm font-medium text-white hover:bg-blue-600 transition-colors"
-    >
-      Get in Touch
-    </a>
+   <a
+  href="#contact"
+  class="inline-flex h-10 items-center justify-center rounded-lg bg-primary px-6 text-sm font-medium text-white hover:bg-blue-600 transition-colors"
+  data-i18n="hero.ctaPrimary">
+</a>
 
-    <a
-      href="#work"
-      class="inline-flex h-10 items-center justify-center rounded-lg border border-slate-200 bg-transparent px-6 text-sm font-medium hover:bg-slate-50 transition-colors"
-    >
-      View Work
-    </a>
+  <a
+  href="#work"
+  class="inline-flex h-10 items-center justify-center rounded-lg border border-slate-200 bg-transparent px-6 text-sm font-medium hover:bg-slate-50 transition-colors"
+  data-i18n="hero.ctaSecondary">
+</a>
+
   </div>
 </section>
 
 <!-- ================= FEATURED WORK ================= -->
 <section id="work" class="flex flex-col gap-8">
   <div class="border-b border-slate-200 pb-4">
-    <h2 class="text-2xl font-bold tracking-tight">Featured Work</h2>
+   <h2 class="text-2xl font-bold tracking-tight" data-i18n="featuredWork.title"></h2>
   </div>
 
   <!-- Project 1 -->
@@ -135,30 +128,24 @@
 
     <div class="flex flex-1 flex-col justify-between p-6 md:p-8">
       <div>
-        <h3 class="text-xl font-bold mb-2">ML End-to-End in Production</h3>
-        <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl">
-          A comprehensive system for deploying and monitoring ML models at scale.
-          Built a custom Kubernetes operator to manage model lifecycle, reducing
-          deployment time by 60% and ensuring 99.9% uptime for inference services.
-        </p>
+      <h3 class="text-xl font-bold mb-2" data-i18n="featuredWork.project1.title"></h3>
+      <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl" data-i18n="featuredWork.project1.description"> </p>
 
         <div class="flex flex-wrap gap-2 mb-6">
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Python</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark">Kubernetes</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">TensorFlow</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Docker</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Prometheus</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Python</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Kubernetes</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">TensorFlow</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Docker </span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Prometheus</span>
         </div>
       </div>
 
-      <button class="text-primary font-medium text-sm flex items-center group-hover:underline">
-        View Case Study
-        <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1">
-          arrow_forward
-        </span>
-      </button>
+     <button class="text-primary font-medium text-sm flex items-center group-hover:underline">
+     <span data-i18n="featuredWork.cta"></span>
+     <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1">arrow_forward</span>
+    </button>
     </div>
-  </article>
+    </article>
 
   <!-- Project 2 -->
  <article
@@ -176,11 +163,8 @@
 
     <div class="flex flex-1 flex-col justify-between p-6 md:p-8">
       <div>
-        <h3 class="text-xl font-bold mb-2">AI Agent in Production</h3>
-        <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl">
-          Developed an autonomous AI agent capable of executing complex multi-step tasks.
-          Integrated LLMs with vector databases for semantic search and long-term memory.
-        </p>
+       <h3 class="text-xl font-bold mb-2" data-i18n="featuredWork.project2.title"></h3>
+       <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl" data-i18n="featuredWork.project2.description"></p>
 
         <div class="flex flex-wrap gap-2 mb-6">
           <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">LLMs</span>
@@ -191,10 +175,8 @@
       </div>
 
       <button class="text-primary font-medium text-sm flex items-center group-hover:underline">
-        View Case Study
-        <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1">
-          arrow_forward
-        </span>
+      <span data-i18n="featuredWork.viewCaseStudy"></span>
+      <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1"> arrow_forward</span>
       </button>
     </div>
   </article>
@@ -203,26 +185,22 @@
 <!-- ================= OTHER PROJECTS ================= -->
 <section class="flex flex-col gap-6">
   <div class="border-b border-slate-200 pb-4">
-    <h2 class="text-xl font-bold tracking-tight">Other Projects</h2>
+    <h2 class="text-xl font-bold tracking-tight" data-i18n="otherProjects.title"></h2>
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div class="rounded-lg border border-slate-200   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
-      <h3 class="font-bold mb-2">SaaS Analytics Dashboard</h3>
-      <p class="text-sm  dark:text-slate-300 mb-4">
-        Full stack React application with Node.js backend for visualizing real-time user metrics.
-      </p>
+     <h3 class="font-bold mb-2" data-i18n="otherProjects.project1.title"></h3>
+      <p class="text-sm dark:text-slate-300 mb-4" data-i18n="otherProjects.project1.description"></p>
       <div class="text-xs text-slate-450 font-mono">React • Node.js • PostgreSQL</div>
     </div>
 
     <div class="rounded-lg border border-slate-200dark:   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
-      <h3 class="font-bold mb-2">Fitness Tracker iOS</h3>
-      <p class="text-sm  dark:text-slate-300 mb-4">
-        Native iOS application utilizing HealthKit and CoreML.
-      </p>
-      <div class="text-xs text-slate-450 font-mono">Swift • SwiftUI • CoreML</div>
+    <h3 class="font-bold mb-2" data-i18n="otherProjects.project2.title"></h3>
+    <p class="text-sm dark:text-slate-300 mb-4" data-i18n="otherProjects.project2.description"></p>
+    <div class="text-xs text-slate-450 font-mono">Swift • SwiftUI • CoreML</div>
     </div>
   </div>
 </section>
@@ -230,7 +208,7 @@
 <!-- ================= SKILLS ================= -->
 <section id="skills" class="flex flex-col gap-8">
   <div class="border-b border-slate-200 pb-4">
-    <h2 class="text-2xl font-bold tracking-tight">Technical Skills</h2>
+    <h2 class="text-2xl font-bold tracking-tight" data-i18n="skills.title"></h2>
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
@@ -256,8 +234,8 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div class="border rounded-lg p-4">
         <span class="material-symbols-outlined text-primary">precision_manufacturing</span>
-        <h4 class="font-bold mt-2">MLOps</h4>
-        <p class="text-xs text-text-secondary">Automating ML lifecycles.</p>
+      <h4 class="font-bold mt-2" data-i18n="skills.mlops.title"></h4>
+     <p class="text-xs text-text-secondary" data-i18n="skills.mlops.description"></p>
       </div>
       <div class="border rounded-lg p-4">
         <span class="material-symbols-outlined text-primary">architecture</span>
@@ -266,13 +244,13 @@
       </div>
       <div class="border rounded-lg p-4">
         <span class="material-symbols-outlined text-primary">speed</span>
-        <h4 class="font-bold mt-2">Optimization</h4>
-        <p class="text-xs text-text-secondary">Low-latency inference.</p>
+        <h4 class="font-bold mt-2" data-i18n="skills.optimization.title"></h4>
+        <p class="text-xs text-text-secondary" data-i18n="skills.optimization.description"></p>
       </div>
       <div class="border rounded-lg p-4">
         <span class="material-symbols-outlined text-primary">security</span>
-        <h4 class="font-bold mt-2">AI Safety</h4>
-        <p class="text-xs text-text-secondary">Robustness and reliability.</p>
+       <h4 class="font-bold mt-2" data-i18n="skills.aiSafety.title"></h4>
+        <p class="text-xs text-text-secondary" data-i18n="skills.aiSafety.description"></p>
       </div>
     </div>
   </div>
@@ -294,6 +272,39 @@
   });
 </script>
 
+<!-- ================= SCRIPT DE IDIOMA ================= -->
+<script>
+  const lang = localStorage.getItem("lang") || "pt-BR";
+  let i18n = {};
+
+  function getValue(obj, path) {
+    return path.split(".").reduce((acc, key) => acc?.[key], obj);
+  }
+
+  async function loadI18n() {
+    const res = await fetch("/content.json");
+    i18n = await res.json();
+
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+      const key = el.dataset.i18n;
+      const value = getValue(i18n[lang], key);
+      if (value) el.textContent = value;
+    });
+      // 🔓 libera render
+  document.body.classList.remove("invisible");
+  }
+
+  function setLang(newLang) {
+    localStorage.setItem("lang", newLang);
+    location.reload();
+  }
+
+  document.addEventListener("DOMContentLoaded", loadI18n);
+</script>
+
+
+
+
 
 </section>
 
@@ -303,7 +314,7 @@
 <div class="flex flex-col md:flex-row justify-between items-center gap-6">
 <div class="flex items-center gap-2">
 <span class="text-sm font-semibold text-text-main dark:text-white">Rafael Gonzaga</span>
-<span class="text-xs text-slate-500">© 2024</span>
+<span class="text-xs text-slate-500">© 2026</span>
 </div>
 <div class="flex items-center gap-8">
 <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="#">
