--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rafael Gonzaga - ML Portfolio Homepage</title>
+
+  <script>
+  const savedLang = localStorage.getItem("lang") || "pt-BR";
+  document.documentElement.lang = savedLang;
+</script>
+
+  <!-- THEME BOOTSTRAP (antes do CSS, sem duplicação) -->
+  <script>
+    window.html = document.documentElement;
+    const savedTheme = localStorage.getItem("theme");
+
+    if (
+      savedTheme === "dark" ||
+      (!savedTheme && window.matchMedia("(prefers-color-scheme: dark)").matches)
+    ) {
+      html.classList.add("dark");
+    }
+  </script>
 
   <!-- Tailwind CSS (build local) -->
   <link href="dist/output.css" rel="stylesheet" />
@@ -18,8 +38,12 @@
     rel="stylesheet"
   />
 
+  <!-- Base styles -->
   <style>
-    body { font-family: "Inter", sans-serif; }
+    body {
+      font-family: "Inter", sans-serif;
+    }
+
     .material-symbols-outlined {
       font-variation-settings:
         "FILL" 0,
@@ -28,7 +52,6 @@
         "opsz" 24;
     }
   </style>
-
 </head>
 
 <body
@@ -254,81 +277,7 @@
       </div>
     </div>
   </div>
-<script>
-  const html = document.documentElement;
-  const button = document.getElementById("theme-toggle");
-  const icon = button.querySelector("span");
-
-  // carregar tema salvo
-  if (localStorage.getItem("theme") === "dark") {
-    html.classList.add("dark");
-    icon.textContent = "light_mode";
-  }
-
-  button.addEventListener("click", () => {
-    const isDark = html.classList.toggle("dark");
-    localStorage.setItem("theme", isDark ? "dark" : "light");
-    icon.textContent = isDark ? "light_mode" : "dark_mode";
-  });
-</script>
-
-<!-- ================= SCRIPT DE IDIOMA ================= -->
-<script>
-  const lang = localStorage.getItem("lang") || "pt-BR";
-  let i18n = {};
-
-  function getValue(obj, path) {
-    return path.split(".").reduce((acc, key) => acc?.[key], obj);
-  }
-
-  async function loadI18n() {
-    const res = await fetch("/content.json");
-    i18n = await res.json();
-
-    document.querySelectorAll("[data-i18n]").forEach(el => {
-      const key = el.dataset.i18n;
-      const value = getValue(i18n[lang], key);
-      if (value) el.textContent = value;
-    });
-      // 🔓 libera render
-  document.body.classList.remove("invisible");
-  }
-
-  function setLang(newLang) {
-    localStorage.setItem("lang", newLang);
-    location.reload();
-  }
-
   
-
-  document.addEventListener("DOMContentLoaded", loadI18n);
-</script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const langToggle = document.getElementById("lang-toggle");
-
-    function updateLangLabel() {
-      const lang = localStorage.getItem("lang") || "pt-BR";
-
-      // mostra PARA QUAL idioma vai traduzir
-      langToggle.textContent =
-        lang === "pt-BR" ? "Translate 🇺🇸" : "Traduzir 🇧🇷";
-    }
-
-    langToggle.addEventListener("click", () => {
-      const current = localStorage.getItem("lang") || "pt-BR";
-      const next = current === "pt-BR" ? "en" : "pt-BR";
-
-      localStorage.setItem("lang", next);
-      location.reload();
-    });
-
-    updateLangLabel();
-  });
-</script>
-
-</section>
 
 <!-- ================= FOOTER ================= -->
  
@@ -354,3 +303,65 @@
 </div>
 </div>
 </footer>
+
+<!-- ================= SCRIPT DARK MODE ================= -->
+<script>
+  const button = document.getElementById("theme-toggle");
+  const icon = button.querySelector("span");
+
+  button.addEventListener("click", () => {
+    const isDark = html.classList.toggle("dark");
+    localStorage.setItem("theme", isDark ? "dark" : "light");
+    icon.textContent = isDark ? "light_mode" : "dark_mode";
+  });
+</script>
+
+<!-- ================= SCRIPT DE IDIOMA ================= -->
+<script>
+  let currentLang = localStorage.getItem("lang") || "pt-BR";
+  let i18n = {};
+
+  function getValue(obj, path) {
+    return path.split(".").reduce((acc, key) => acc?.[key], obj);
+  }
+
+  async function loadI18n() {
+    if (!i18n[currentLang]) {
+      const res = await fetch("/content.json");
+      i18n = await res.json();
+    }
+
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+      const key = el.dataset.i18n;
+      const value = getValue(i18n[currentLang], key);
+      if (value) el.textContent = value;
+    });
+
+    document.body.classList.remove("invisible");
+  }
+
+  function toggleLanguage() {
+    currentLang = currentLang === "pt-BR" ? "en" : "pt-BR";
+    localStorage.setItem("lang", currentLang);
+    document.documentElement.lang = currentLang;
+    updateLangLabel();
+    loadI18n();
+  }
+
+  function updateLangLabel() {
+    const btn = document.getElementById("lang-toggle");
+    if (!btn) return;
+
+    btn.textContent =
+      currentLang === "pt-BR" ? "Translate 🇺🇸" : "Traduzir 🇧🇷";
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    updateLangLabel();
+    loadI18n();
+
+    const btn = document.getElementById("lang-toggle");
+    if (btn) btn.addEventListener("click", toggleLanguage);
+  });
+</script>
+</section>
