--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="w-full md:w-2/5 h-64 md:h-auto bg-slate-100 relative overflow-hidden">
       <div
         class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-105"
-        style="background-image:url('https://lh3.googleusercontent.com/aida-public/AB6AXuAvhKvILjJEpIzXnXPDp_hgru1eZHDb-PQpZ3VP4Pjwx0pymkxY0uWgqniyOTOzYasxNxLuXW90rHJ0qo50gKbepoAzq-cJZuPnTUzazxKyukZU_hvgMfTnUI0jqdBNZMESe_WQMbbN-QGoUAsdZmgrk5ZU2D_C3n1QIcitpuxrXPa8h-TquzMJWPHY00COTNw2uslydL3RPll1PdbMNCVOw5o557ICsIrT2EkvGx0cTa0Xtne8wfDV3vUHvjYKZur56z6qwfEFRz8');">
+        style="background-image:url('https://github.com/rafaelluisgonzaga/22_12-2025_ML_End-to-End_Project-/blob/main/IMAGE.png?raw=true');">
       </div>
     </div>
 
@@ -156,16 +156,16 @@
 
         <div class="flex flex-wrap gap-2 mb-6">
         <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Python</span>
-        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Kubernetes</span>
-        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">TensorFlow</span>
-        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Docker </span>
-        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Prometheus</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Pandas</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Scikit-learn</span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">APIs REST </span>
+        <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Machine Learning</span>
         </div>
       </div>
 
      <button class="text-primary font-medium text-sm flex items-center group-hover:underline">
      <span data-i18n="featuredWork.cta"></span>
-     <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1">arrow_forward</span>
+     <a href="https://github.com/rafaelluisgonzaga/22_12-2025_ML_End-to-End_Project-" target="_blank" rel="noopener noreferrer" class="group inline-flex items-center"><span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1"> arrow_forward</span></a>
     </button>
     </div>
     </article>
@@ -180,7 +180,7 @@
     <div class="w-full md:w-2/5 h-64 md:h-auto bg-slate-100 relative overflow-hidden">
       <div
         class="absolute inset-0 bg-cover bg-center transition-transform duration-500 group-hover:scale-105"
-        style="background-image:url('https://lh3.googleusercontent.com/aida-public/AB6AXuAafNfTlQClPipIjZouyXgva6i_5ztV18G7Jo0Qm07EG_oa_3yI5U8dNbOsDGCFM7b2Sm-7RctKPJCUK2FgwfzYdcMXZs8luvJ7YyvV_WTEwBYvm2qRPbyUaJKNGqEbVg9bm8PHdAXq8OfLU7ezjlmWWdNOPmEji6scMEYQzzNmMQV854dcNLy91d9Ma7VcSKK0_Loj4d6gYdFXRKhkuu6GkxnWlIFIJe9_oZvEAOtdiCE4MP7WNM5WcO2QMR_AdFIZtwUhJojsUWQ');">
+        style="background-image:url('https://github.com/rafaelluisgonzaga/21-10-2025_Agente_de_IA/blob/main/rafaelluisgonzaga.png?raw=true');">
       </div>
     </div>
 
@@ -190,16 +190,16 @@
        <p class="text-text-secondary dark:text-slate-300 mb-6 leading-relaxed max-w-xl" data-i18n="featuredWork.project2.description"></p>
 
         <div class="flex flex-wrap gap-2 mb-6">
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">LLMs</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">LangChain</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Pinecone</span>
-          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">FastAPI</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Python</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium"> NLP</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">Google Cloud</span>
+          <span class="inline-flex rounded-md bg-tag dark:bg-tag-dark text-text-main dark:text-text-dark px-2.5 py-0.5 text-xs font-medium">RAG</span>
         </div>
       </div>
 
       <button class="text-primary font-medium text-sm flex items-center group-hover:underline">
-      <span data-i18n="featuredWork.viewCaseStudy"></span>
-      <span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1"> arrow_forward</span>
+      <span data-i18n="featuredWork.cta"></span>
+       <a href="https://github.com/rafaelluisgonzaga/21-10-2025_Agente_de_IA" target="_blank" rel="noopener noreferrer" class="group inline-flex items-center"><span class="material-symbols-outlined ml-1 transition-transform group-hover:translate-x-1"> arrow_forward</span></a>
       </button>
     </div>
   </article>
@@ -216,14 +216,14 @@
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
      <h3 class="font-bold mb-2" data-i18n="otherProjects.project1.title"></h3>
       <p class="text-sm dark:text-slate-300 mb-4" data-i18n="otherProjects.project1.description"></p>
-      <div class="text-xs text-slate-450 font-mono">React • Node.js • PostgreSQL</div>
+      <div class="text-xs text-slate-450 font-mono">Mobile Applications • MVVM • Combine • Swift/SwiftUI</div>
     </div>
 
     <div class="rounded-lg border border-slate-200dark:   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main p-6 hover:shadow-sm transition-shadow">
     <h3 class="font-bold mb-2" data-i18n="otherProjects.project2.title"></h3>
     <p class="text-sm dark:text-slate-300 mb-4" data-i18n="otherProjects.project2.description"></p>
-    <div class="text-xs text-slate-450 font-mono">Swift • SwiftUI • CoreML</div>
+    <div class="text-xs text-slate-450 font-mono"> Java 17 • Spring Boot • MySQL Driver •Flyway Migration </div>
     </div>
   </div>
 </section>
@@ -238,40 +238,40 @@
     <ul class="space-y-3">
       <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
-        <span>Python & PyTorch</span><span class="text-xs text-slate-400">Expert</span>
+        <span>Python Backend Engineering</span><span class="text-xs text-slate-400">Scalability</span>
       </li>
       <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
-        <span>Docker & Kubernetes</span><span class="text-xs text-slate-400">Advanced</span>
+        <span>Machine Learning in Production</span><span class="text-xs text-slate-400">Reliability</span>
       </li>
       <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
-        <span>AWS & GCP</span><span class="text-xs text-slate-400">Advanced</span>
+        <span>AI & NLP Systems Integration</span><span class="text-xs text-slate-400">Intelligence</span>
       </li>
       <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
   dark:bg-tag-dark dark:text-text-dark dark:border-border-darktext-text-main border">
-        <span>SQL & NoSQL</span><span class="text-xs text-slate-400">Proficient</span>
+        <span>End-to-End ML Pipelines</span><span class="text-xs text-slate-400">Reproducibility</span>
       </li>
     </ul>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
       <div class="border rounded-lg p-4">
-        <span class="material-symbols-outlined text-primary">precision_manufacturing</span>
+        <span class="material-symbols-outlined text-primary">integration_instructions</span>
       <h4 class="font-bold mt-2" data-i18n="skills.mlops.title"></h4>
      <p class="text-xs text-text-secondary" data-i18n="skills.mlops.description"></p>
       </div>
       <div class="border rounded-lg p-4">
-        <span class="material-symbols-outlined text-primary">architecture</span>
-        <h4 class="font-bold mt-2">System Design</h4>
-        <p class="text-xs text-text-secondary">Scalable distributed systems.</p>
+        <span class="material-symbols-outlined text-primary">verified</span>
+        <h4 class="font-bold mt-2" data-i18n="skills.design.title"></h4>
+        <p class="text-xs text-text-secondary" data-i18n="skills.design.description"></p>
       </div>
       <div class="border rounded-lg p-4">
-        <span class="material-symbols-outlined text-primary">speed</span>
+        <span class="material-symbols-outlined text-primary">precision_manufacturing</span>
         <h4 class="font-bold mt-2" data-i18n="skills.optimization.title"></h4>
         <p class="text-xs text-text-secondary" data-i18n="skills.optimization.description"></p>
       </div>
       <div class="border rounded-lg p-4">
-        <span class="material-symbols-outlined text-primary">security</span>
+        <span class="material-symbols-outlined text-primary">trending_up</span>
        <h4 class="font-bold mt-2" data-i18n="skills.aiSafety.title"></h4>
         <p class="text-xs text-text-secondary" data-i18n="skills.aiSafety.description"></p>
       </div>
@@ -327,7 +327,7 @@
 
   async function loadI18n() {
     if (!i18n[currentLang]) {
-      const res = await fetch("/content.json");
+      const res = await fetch("./content.json");
       i18n = await res.json();
     }
 
@@ -364,4 +364,4 @@
     if (btn) btn.addEventListener("click", toggleLanguage);
   });
 </script>
-</section>
+
