ajuster no header

--- a/index.html
+++ b/index.html
@@ -89,13 +89,24 @@
         <h2 class="text-lg font-bold tracking-tight">Rafael Gonzaga</h2>
       </div>
 
-      <nav class="hidden sm:flex items-center gap-8">
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" data-i18n="nav.work"></a>
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 transition-colors" data-i18n="nav.skills"></a>
-        <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" data-i18n="nav.contact"></a>
-        <button id="lang-toggle" class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors" aria-label="Toggle language">EN</button>
-      
-      </nav>
+     <nav class="hidden sm:flex items-center gap-8">
+     <a href="#work"
+     class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors"
+     data-i18n="nav.work"></a>
+
+  <a href="#skills"
+     class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors"
+     data-i18n="nav.skills"></a>
+
+  <a href="#contact"
+     class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors"
+     data-i18n="nav.contact"></a>
+
+  <button id="lang-toggle"
+          class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors">
+    EN
+  </button>
+</nav>
     </div>
   </div>
 </header>
@@ -288,15 +299,13 @@
 <span class="text-xs text-slate-500">© 2026</span>
 </div>
 <div class="flex items-center gap-8">
-<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="#">
-                                GitHub
-                                <span class="material-symbols-outlined text-base">arrow_outward</span>
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="https://github.com/rafaelluisgonzaga">GitHub<span class="material-symbols-outlined text-base">arrow_outward</span>
 </a>
-<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="#">
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="https://www.linkedin.com/in/rafaelluisgonzaga/">
                                 LinkedIn
                                 <span class="material-symbols-outlined text-base">arrow_outward</span>
 </a>
-<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="mailto:hello@example.com">
+<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="mailto:rluisp@icloud.com">
                                 Email
                                 <span class="material-symbols-outlined text-base">mail</span>
 </a>
