--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <span>AI & NLP Systems Integration</span><span class="text-xs text-slate-400">Intelligence</span>
       </li>
       <li class="flex justify-between items-center p-3 rounded-lg   bg-tag text-text-main border-border
-  dark:bg-tag-dark dark:text-text-dark dark:border-border-darktext-text-main border">
+  dark:bg-tag-dark dark:text-text-dark dark:border-border-dark text-text-main border">
         <span>End-to-End ML Pipelines</span><span class="text-xs text-slate-400">Reproducibility</span>
       </li>
     </ul>
@@ -299,12 +299,24 @@
 <span class="text-xs text-slate-500">© 2026</span>
 </div>
 <div class="flex items-center gap-8">
-<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="https://github.com/rafaelluisgonzaga">GitHub<span class="material-symbols-outlined text-base">arrow_outward</span>
-</a>
-<a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="https://www.linkedin.com/in/rafaelluisgonzaga/">
-                                LinkedIn
-                                <span class="material-symbols-outlined text-base">arrow_outward</span>
-</a>
+  <a
+    class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1"
+    href="https://github.com/rafaelluisgonzaga"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    GitHub
+    <span class="material-symbols-outlined text-base">arrow_outward</span>
+  </a>
+  <a
+    class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1"
+    href="https://www.linkedin.com/in/rafaelluisgonzaga/"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
+    LinkedIn
+    <span class="material-symbols-outlined text-base">arrow_outward</span>
+  </a>
 <a class="text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-primary transition-colors flex items-center gap-1" href="mailto:rluisp@icloud.com">
                                 Email
                                 <span class="material-symbols-outlined text-base">mail</span>
